--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -5,7 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background = "@drawable/_667202530_3_18"
-    tools:context=".Schedule">
+    tools:context=".LayoutsScripts.Schedule">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -24,13 +28,13 @@
 </androidx.constraintlayout.widget.ConstraintLayout>
 
     <!-- TODO: Update blank fragment layout -->
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="550dp"
-        android:translationY="100dp"
-        android:background="@drawable/mainbutton">
+        android:layout_height="650dp"
+        android:background="@drawable/mainbutton"
+        android:orientation="vertical">
 
-        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
+        <CalendarView
             android:id="@+id/calendarView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -42,7 +46,51 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-        </com.prolificinteractive.materialcalendarview.MaterialCalendarView>
+        </CalendarView>
 
-         </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/idTVDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Дата"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintTop_toBottomOf="@id/calendarView" />
+
+        <ProgressBar
+            android:id="@+id/loadingIndicator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            app:layout_constraintTop_toTopOf="@id/scrolltimetable"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:visibility="gone"
+            android:indeterminateDrawable="@drawable/progress_bar_custom_2"
+            />
+<ScrollView
+    android:id="@+id/scrolltimetable"
+    android:layout_width="match_parent"
+    android:layout_height="270dp"
+    android:fillViewport="true">
+        <LinearLayout
+            android:id="@+id/timetable_tableLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:gravity="center_horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/idTVDate"
+            android:orientation="horizontal">
+
+        </LinearLayout>
+</ScrollView>
+
+    </LinearLayout>
+    </LinearLayout>
 </FrameLayout>
