--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -30,7 +30,7 @@
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="650dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/mainbutton"
         android:orientation="vertical">
 
@@ -38,7 +38,6 @@
             android:id="@+id/calendarView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
             app:mcv_arrowColor="@android:color/darker_gray"
             app:mcv_selectionColor="@android:color/darker_gray"
             app:mcv_showOtherDates="all"
@@ -53,28 +52,26 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Дата"
+            android:translationY="-40dp"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@id/calendarView" />
-
         <ProgressBar
             android:id="@+id/loadingIndicator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            app:layout_constraintTop_toTopOf="@id/scrolltimetable"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_gravity="center"
             android:visibility="gone"
             android:indeterminateDrawable="@drawable/progress_bar_custom_2"
             />
 <ScrollView
     android:id="@+id/scrolltimetable"
     android:layout_width="match_parent"
-    android:layout_height="270dp"
-    android:fillViewport="true">
+    android:layout_height="wrap_content"
+    android:fillViewport="true"
+    android:translationY="-40dp">
         <LinearLayout
             android:id="@+id/timetable_tableLayout"
             android:layout_width="match_parent"
@@ -87,7 +84,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/idTVDate"
             android:orientation="horizontal">
-
         </LinearLayout>
 </ScrollView>
 
