--- a/app/src/main/res/layout/fragment_marks.xml
+++ b/app/src/main/res/layout/fragment_marks.xml
@@ -6,6 +6,10 @@
     android:layout_height="match_parent"
     android:background = "@drawable/_667202530_3_18"
     tools:context=".LayoutsScripts.marks">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -19,16 +23,15 @@
             android:textSize="40sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <!-- TODO: Update blank fragment layout -->
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="550dp"
+        android:layout_height="match_parent"
         android:background="@drawable/mainbutton"
-        android:translationY="100dp"
         android:fillViewport="true"
         >
         <LinearLayout
@@ -37,12 +40,9 @@
             android:id="@+id/MarksLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
             android:orientation="horizontal">
 
         </LinearLayout>
     </ScrollView>
+    </LinearLayout>
 </FrameLayout>
