--- a/app/src/main/res/layout/fragment_profile1.xml
+++ b/app/src/main/res/layout/fragment_profile1.xml
@@ -10,13 +10,12 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/linearLayout4"
-        android:layout_width="350dp"
-        android:layout_height="250dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:background="@drawable/toolbarbottom"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ID">
+        app:layout_constraintStart_toStartOf="parent">
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/button1"
@@ -25,6 +24,7 @@
             android:background="@drawable/slidemenubutton"
             android:gravity="center"
             android:text="Публикации"
+            android:layout_marginBottom="20dp"
             android:textColor="@color/white"
             android:textSize="17dp"
             app:layout_constraintBottom_toTopOf="@+id/button2"
@@ -39,6 +39,8 @@
             android:background="@drawable/slidemenubutton"
             android:gravity="center"
             android:text="Документы об образовании"
+            android:layout_marginBottom="20dp"
+
             android:textColor="@color/white"
             android:textSize="17dp"
             app:layout_constraintBottom_toTopOf="@+id/button3"
@@ -55,6 +57,7 @@
             android:background="@drawable/slidemenubutton"
             android:gravity="center"
             android:text="Гранты"
+            android:layout_marginBottom="20dp"
             android:textColor="@color/white"
             android:textSize="17dp"
             app:layout_constraintBottom_toTopOf="@+id/button4"
@@ -71,6 +74,8 @@
             android:background="@drawable/slidemenubutton"
             android:gravity="center"
             android:text="Интеллектуальная собственность"
+            android:layout_marginBottom="20dp"
+
             android:textColor="@color/white"
             android:textSize="17dp"
             app:layout_constraintBottom_toBottomOf="parent"
