--- a/app/src/main/res/layout/event_description.xml
+++ b/app/src/main/res/layout/event_description.xml
@@ -22,9 +22,10 @@
             android:background="@drawable/schedilestroke">
 
             <TextView
+                android:id="@+id/currentEventTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Рейтинг план"
+                android:text="Название события"
                 android:textColor="@color/white"
                 android:textSize="30sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -33,62 +34,29 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/schedilestroke">
-
-            <TextView
-                android:id="@+id/rating_plan_discipline_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="|название дисциплины|"
-                android:textColor="@color/white"
-                android:textSize="20sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="15">
+            android:layout_weight="15"
+            android:background="@drawable/mainbutton"
+            >
 
             <LinearLayout
-                android:id="@+id/rating_plan_layout"
+                android:id="@+id/current_event_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:gravity="center">
                 <ProgressBar
-                android:id="@+id/loadingIndicatorRatingPlan"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:visibility="gone"
-                android:indeterminateDrawable="@drawable/progress_bar_custom_2"
-                />
-                <ImageView
-                    android:id="@+id/errorimage"
-                    android:layout_width="280dp"
-                    android:layout_height="280dp"
+                    android:id="@+id/loadingIndicatorforumMessage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:visibility="gone"
-                    android:background="@drawable/error">
-
-                </ImageView>
+                    android:indeterminateDrawable="@drawable/progress_bar_custom_2"
+                    />
             </LinearLayout>
 
         </ScrollView>
-
-        <LinearLayout
-            android:id="@+id/rating_plan_total"
-            android:background="@drawable/schedilestroke"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="75"
-            android:orientation="horizontal"
-            android:padding="5dp" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
